2005-03-29  Pavel Roskin  <proski@gnu.org>

	* cpio.c (cpio_find_head): Fix for logical error that can cause
	crash on broken cpio archives.

2005-02-22  Roland Illig  <roland.illig@gmx.de>

	* *.c: Declared unused variables with (void) to avoid the gcc
	warnings.
	* extfs.c (extfs_get_path_mangle, extfs_get_path): Removed unused
	parameter.
	* ftpfs.c (ftpfs_netrc_bad_mode): Likewise.
	* vfs.c (mc_def_getlocalcopy): Likewise.

2005-02-19  Roland Illig  <roland.illig@gmx.de>

	* utilvfs.h: Removed unneeded #includes.
	* *.c: Added the #includes that have been removed from utilvfs.h.
	* tcputil.c: Just removed the unneeded #include "utilvfs.h".

2005-02-18  Roland Illig  <roland.illig@gmx.de>

	* *.h: Renamed the multiple inclusion guards.

2005-02-14  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* samba/lib/util_str.c: Comment out strhasupper(), strhaslower(),
	toktocliplist(), strncpyn(), strhex_to_str(), all_string_sub(),
	strnorm(), strisnormal()  and split_at_last_component().
	* samba/lib/time.c: Comment out http_timestring().
	* samba/lib/util.c: Comment out Protocol, trans_num, case_sensitive,
	case_preserve, use_mangled_map, short_case_preserve, case_mangle,
	my_netbios_names.
	Make sam_logon_in_ssb and case_default const.
	(samlogon_user): Make char* instead of pstring.
	* samba/libsmb/clientgen.c: Comment out cli_api_pipe(),
	cli_NetWkstaUserLogon(), cli_tdis(), cli_nt_create(), cli_ulogoff(),
	cli_lock(), cli_unlock(), cli_message_start(), cli_message_text()
	and cli_message_end().
	* samba/libsmb/namequery.c (global_in_nmbd): Make const.
	(find_master_ip): Comment out.
	* samba/libsmb/nmblib.c: Comment out matching_bits(), sort_ip,
	name_query_comp() and sort_query_replies().

2005-02-12  Jindrich Novy  <jnovy@redhat.com>

	* vfs.c (vfs_translate_url): Add support for smb://, sh://,
	ssh:// and mc:// filesystem requests. Introduced separate table
	for vfs aliases.
	* util.c (strip_password): Modifications to take the aliases into